--- a/src/pages/cart/styles.module.css
+++ b/src/pages/cart/styles.module.css
@@ -6,8 +6,9 @@
 
 .content {
   display: grid;
-  grid-template-columns: 1fr 548px;
-  gap: 32px;
+  grid-template-columns: 1fr minmax(360px, 548px);
+  column-gap: 32px;
+  row-gap: 60px;
   align-items: flex-start;
   margin-bottom: 80px;
 }
@@ -43,6 +44,6 @@
   }
 
   .container {
-    padding: 0 16px;
+    padding: 0 30px;
   }
 }
